/*
 * Copyright 2019, TeamDev. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.test.tools.validation.builder;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_multiple_files = true;
option java_outer_classname = "TopLevelMessagesProto";
option java_package = "io.spine.test.tools.validation.builder";

import "spine/net/url.proto";

import "google/protobuf/timestamp.proto";

// This file defines messages for testing generation of validating builders.
//
// Use only for tests in package `io.spine.tools.compiler.validation`.

//
// Defines a project with tasks and members.
//
// A project can also have subscribers, who are people interested in the project outcome.
//
message VbtProject {

    // The tasks contained in this project
    //
    // This field is both required and validated.
    //
    repeated VbtTask task = 1 [(validate) = true, (required) = true];

    // The emails of the project subscribers.
    //
    // This field is validated but not required.
    repeated string subscriber_email = 2 [(validate) = true, (pattern).regex = ".+@.+\\..+"];

    // The members of the project.
    //
    // This field is required, but the contents of the messages are never validated.
    //
    repeated VbtMember member = 3 [(required) = true];

    // A set of descriptions which are added to this project.
    //
    // This field is neither required, nor validated.
    //
    string description = 4;

    // The map of the roles of the members in this project.
    //
    // This field is required but never validated.
    //
    map<string, VbtMember> role = 5 [(required) = true, (validate) = true];

    // A map of the task IDs to the task attachments.
    //
    // This field validated but not required.
    //
    map<string, VbtAttachment> attachment = 6 [(validate) = true, (required) = false];

    // The map of the task IDs to the time when the task was deleted.
    //
    // This field is required, but the contents of the messages are never validated.
    //
    map<string, google.protobuf.Timestamp> deleted_task = 7 [(required) = true];

    // The map of the task IDs to the labels of the task.
    //
    // This field is neither required, nor validated.
    //
    map<string, string> label = 8;

    // The owner of the project.
    oneof owner {

        // The ID of the owner.
        string owner_id = 9;

        // The email of the owner.
        string owner_email = 10;
    }
}

// A task in a project.
message VbtTask {

    // The ID of the task.
    string id = 1 [(required) = true];

    // The name of the task.
    string name = 2 [(required) = true];
}

// A member of a project.
message VbtMember {

    string id = 1 [(required) = true];

    string name = 2 [(pattern).regex = ".+\\s+.+"];

    bytes avatar_image = 3 [(required) = true];
}

message VbtAttachment {

    string id = 1 [(required) = true];

    string title = 2 [(required) = true, (pattern).regex = ".*\\w+.*"];

    spine.net.Url url = 3 [(required) = true, (validate) = true];
}
